--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="hero-content">
             <div class="logo">
                 <!-- החלף את src עם הנתיב לתמונת הלוגו שלך -->
-                <img src="/images/לוגו.png" alt="ProToBe Logo">
+                <img src="images/לוגו.png" alt="ProToBe Logo">
             </div>
             <h1>ProToBe</h1>
             <p class="subtitle">השקעה בעתיד שלך - מהסטודנט לפרופסיונל</p>
@@ -97,16 +97,16 @@
                 </div>
                 <div class="amit-images">
                     <div class="amit-image">
-                        <img src="/images/Me.png" alt="עמית הופמן - מייסד ProToBe">
+                        <img src="images/Me.png" alt="עמית הופמן - מייסד ProToBe">
                     </div>
                     <div class="amit-image">
-                        <img src="/images/GOPR0544 (1).JPG" alt="עמית הופמן במהלך השיקום">
+                        <img src="images/GOPR0544 (1).JPG" alt="עמית הופמן במהלך השיקום">
                     </div>
                     <div class="amit-image">
-                        <img src="/images/GOPR0360.JPG" alt="עמית הופמן בפעילות צבאית">
+                        <img src="images/GOPR0360.JPG" alt="עמית הופמן בפעילות צבאית">
                     </div>
                     <div class="amit-image">
-                        <img src="/images/Eduction.jpg" alt="עמית הופמן בלימודים">
+                        <img src="images/Eduction.jpg" alt="עמית הופמן בלימודים">
                     </div>
                 </div>
             </div>
@@ -120,7 +120,7 @@
             <div class="team-grid">
                 <div class="team-member">
                     <div class="member-photo">
-                        <img src="/images/Me.png" alt="עמית הופמן">
+                        <img src="images/Me.png" alt="עמית הופמן">
                     </div>
                     <div class="member-name">עמית הופמן</div>
                     <div class="member-role">מנכ"ל ומייסד</div>
@@ -131,7 +131,7 @@
                 </div>
                 <div class="team-member">
                     <div class="member-photo">
-                        <img src="/images/oren.JPG" alt="אורן אהוביה">
+                        <img src="images/oren.JPG" alt="אורן אהוביה">
                     </div>
                     <div class="member-name">אורן אהוביה</div>
                     <div class="member-role">COO</div>
@@ -142,7 +142,7 @@
                 </div>
                 <div class="team-member">
                     <div class="member-photo">
-                        <img src="/images/guySS.jpg" alt="גיא סהר">
+                        <img src="images/guySS.jpg" alt="גיא סהר">
                     </div>
                     <div class="member-name">גיא סהר</div>
                     <div class="member-role">CTO</div>
@@ -153,7 +153,7 @@
                 </div>
                 <div class="team-member">
                     <div class="member-photo">
-                        <img src="/images/orenb.jpg" alt="אורן בש">
+                        <img src="images/orenb.jpg" alt="אורן בש">
                     </div>
                     <div class="member-name">אורן בש</div>
                     <div class="member-role">CMO</div>
@@ -218,7 +218,7 @@
 
             <div class="partnership-card">
                 <div class="partnership-logo">
-                    <img src="/images/Logo Sun.jpg" alt="לוגו עמותת SUNRISE ישראל">
+                    <img src="images/Logo Sun.jpg" alt="לוגו עמותת SUNRISE ישראל">
                 </div>
                 <h3 style="color: #2c3e50; margin-bottom: 1rem;">עמותת SUNRISE ישראל</h3>
                 <p style="color: #5a6c7d; line-height: 1.6;">
@@ -231,7 +231,7 @@
                 <div class="volunteers-section">
                     <h4 style="color: #2c3e50; margin: 2rem 0 1rem 0;">המתנדבים שלנו בפעולה</h4>
                     <div class="volunteers-image">
-                        <img src="/images/Vol.jpg" alt="מתנדבי ProToBe עובדים עם עמותת SUNRISE">
+                        <img src="images/Vol.jpg" alt="מתנדבי ProToBe עובדים עם עמותת SUNRISE">
                     </div>
                     <p style="color: #5a6c7d; margin-top: 1rem; font-style: italic;">
                         "הצוות של ProToBe הביא אנרגיה צעירה ורעיונות חדשניים שעזרו לנו להרחיב את ההשפעה שלנו" - נציג עמותת SUNRISE
